<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/agence"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_domain_com"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/edit_text_bg"
        android:textColor="#000000"
        android:textColorHint="#555555"
        android:layout_marginBottom="12dp"
        android:drawablePadding="10dp"
        android:autofillHints="emailAddress"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mdp"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/edit_text_bg"
        android:textColor="#000000"
        android:textColorHint="#555555"
        android:layout_marginBottom="24dp"
        android:drawablePadding="10dp"
        android:autofillHints="password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/CustomButtonStyle" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pas_de_compte"
        android:textSize="16sp"
        android:textColor="#555555"
        android:gravity="center"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:background="?android:attr/selectableItemBackground"/>
</LinearLayout>
