<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    android:elevation="1dp"
    android:padding="0dp"
    android:backgroundTint="@android:color/white">

    <TextView
        android:id="@+id/destinationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Montréal, Québec"
        android:textStyle="bold"
        android:textColor="#000000"
        android:padding="8dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:textColor="#666666"
        android:padding="8dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/montantText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/montant_paye"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="#666666" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Confirme"
            android:padding="8dp"
            android:textColor="#666666" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            style="@style/CustomButtonStyle" />
    </LinearLayout>
</LinearLayout>
